...
    }

    return <EmptyList />;
  }, [loading, error]);

  return (
    <View testID="organizations-screen" style={styles.container}>
      {Boolean(data?.length) && (
        <Searchbar
          autoComplete="off"
          accessibilityRole="search"
          placeholder="Search organizations by name"
          testID="organizations-searchbar"
          onChangeText={query => setSearchQuery(query)}
          value={searchQuery}
          style={styles.searchbar}
          inputStyle={styles.searchbarInput}
        />
      )}
...
